src/main/resources/static/events.css
HTML CSSResult
EDIT ON
@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap");

* {
  padding: 0;
  margin: 0;
}

html {
  font-family: 'Roboto', sans-serif;
  font-size: 12px;
}


body {
  background: #008240;
  background: -webkit-linear-gradient(to right, #008240, #77BE4E);
  background: linear-gradient(to right, #008240,#77BE4E);
} 

.wrapper {
  height: 100%;
  width: 100%;
  height: 100vh;
}

.event_post {
    margin-top: 32px;
    position: relative;
    padding: 6rem 3rem 6rem 6rem;
    background: #fff;
    max-width: 1200px;
    height: 375px;
    border-radius: 10px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -170%);
    box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
    flex: 50%;
  }

.img_pod {
  height: 170px;
  width: 268px;
  background: linear-gradient(90deg,  #ff9966, #ff5e62);
  z-index: -1;
  box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
  border-radius: 5%;
  position: absolute;
  left: 0px;
  top: 0px;
  transform: translateY(0%);
}

img {
  height: 170px;
  width: 268px;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 5%;
  box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
}

.container_copy {
  transform: translateY(-50px);
  height: auto;
  margin-left: 220px;
}

.month {
  width: 215px;
  position: absolute;
  text-align: center;
  margin-top: 150px;
  margin-left: 0px;
  margin-right: 0px;
  color: black;
  font-size: 2.00rem;
  transform: translateX(-50px);
}

.time {
    width: 215px;
    position: absolute;
    text-align: center;
    margin-top: 200px;
    margin-left: 0px;
    margin-right: 0px;
    color: black;
    font-size: 2.00rem;
    transform: translateX(-50px);}

.title {
  height: 68px;
  margin: 0 0 1rem 0;
  font-size: 2.0rem;
  letter-spacing: 0.5px;
  color: #333;
  overflow: hidden;
}

.hostedBy {
    height: 40px;
    margin: 0 0 0rem 0;
    font-size: 1.25rem;
    letter-spacing: 0.5px;
    color: #333;
    overflow: hidden;
}

.location {
    height: 20px;
    margin-top: 10px;
    font-size: 1.25rem;
    letter-spacing: 0.5px;
    color: #333;
    overflow: hidden;
}

.desc {
  margin-top: 20px;
  width: auto;
  height: 140px;
  font-size: 1.25rem;
  color: #333;
  overflow-y: scroll;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.btn_primary {
  transform: translateY(-20px);
  width: 125px;
  border: none;
  outline: none;
  background: linear-gradient(90deg, #ff9966, #ff5e62);
  padding: 1.5rem 2rem;
  border-radius: 50px;
  color: white;
  font-size: 1.2rem;
  box-shadow: 1px 10px 2rem rgba(255, 94, 98, 0.5);
  transition: all .2s ease-in;
  text-decoration: none;
}

Resources1×0.5×0.25×Rerun

